--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -18,6 +18,14 @@
     </servlet-mapping>
 
 
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/applicationContext.xml</param-value>
+    </context-param>
     <!--<context-param>-->
         <!--<param-name>contextConfigLocation</param-name>-->
         <!--<param-value>/WEB-INF/testmaven2-servlet.xml</param-value>-->
