--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -20,11 +20,11 @@
 
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
+     </listener>
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/applicationContext.xml</param-value>
+        <param-value>classpath:applicationContext.xml</param-value>
     </context-param>
     <!--<context-param>-->
         <!--<param-name>contextConfigLocation</param-name>-->
